--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,5 @@
 /*! HTML5 Boilerplate v5.2.0 | MIT License | https://html5boilerplate.com/ */
 
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
@@ -15,14 +9,9 @@ html {
     font-size: 1em;
     line-height: 1.4;
 }
-
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
+html.no-mediaqueries {
+    font-size:2em;
+}
 
 ::-moz-selection {
     background: #b3d4fc;
@@ -34,50 +23,8 @@ html {
     text-shadow: none;
 }
 
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
+img {
     vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
 }
 
 /* ==========================================================================
@@ -107,13 +54,16 @@ body {
     height:100%;
     font-family:"chaparral-pro",Georgia,"Times New Roman",Times,serif;
     font-weight:400;
-    background:#000 url('../img/background-pattern.png') repeat fixed;
+    background-attachment:scroll;
+    background-attachment:fixed;
+    background-image:url(../img/background-pattern.png);
+    background-repeat:repeat;
     background-size:contain;
 }
 section {
     width:100%;
     min-height:100%;
-    min-height:100vh;
+    /*min-height:100vh; // Messes up iOS */
     position:relative;
     overflow:hidden;
     color:#333;
@@ -140,15 +90,6 @@ p {
     background-size:cover;
     background-position:50% 50%;
 }
-/*
-$charcoal:#333;
-$light:#f9f9f9;
-$blue:#00b3eb;
-$pink:#a23479;
-$teal:#0f3d4c;
-$gold:#e4b53c;
-*/
-
 .section--type1 {
     background-color:#0f3d4c;
     background-color:rgba(15,61,76,0.97);
@@ -206,11 +147,19 @@ $gold:#e4b53c;
 .section__content a {
     color:#ccc;
 }
+.no-csstransforms .section__content {
+    position:absolute;
+    top:50%;
+    left:50%;
+    width:800px;
+    margin:-200px 0 0 -400px;
+}
 .csstransforms .section__content {
     position:absolute;
     top:50%;
     left:50%;
     -webkit-transform:translate(-50%, -50%);
+        -ms-transform:translate(-50%, -50%);
             transform:translate(-50%, -50%);
 }
 .section__stat {
@@ -279,84 +228,9 @@ $gold:#e4b53c;
     font-size:3rem;
     line-height:1.1;
 }
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers:
- */
-
-.hidden {
-    display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
 
 /* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
+   Media Queries for Responsive Design.
    ========================================================================== */
 
 @media only screen and (min-width: 16.5em) {
@@ -389,13 +263,6 @@ $gold:#e4b53c;
         width:264px;
         height:40px;
     }
-}
-
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
 }
 
 /* ==========================================================================
